Fixed horizontal scroll height Fixed youtube preload play icon on different screen sizes

--- a/chat/static/sass/chat.sass
+++ b/chat/static/sass/chat.sass
@@ -116,17 +116,17 @@ fieldset
 				z-index: 13
 				top: 50%
 				left: 50%
-				margin-top: -35px
-				margin-left: -45px
+				margin-top: -50px
+				margin-left: -55px
 				font-size: 50px
 				color: black
-				height: 80px
-				width: 80px
-				@media screen and (max-height: 40em)
-					margin-top: -10px
-					margin-left: -15px
-					height: 30px
-					width: 30px
+				height: 100px
+				width: 100px
+				@media screen and (max-width: $collapse-width)
+					margin-top: -35px
+					margin-left: -40px
+					height: 70px
+					width: 70px
 
 	.giphy
 		position: relative
