--- a/chat/static/sass/partials/mixins.sass
+++ b/chat/static/sass/partials/mixins.sass
@@ -181,7 +181,7 @@
 
 	::-webkit-scrollbar
 		background-color: $background
-		height: 10px
+		height: 8px
 		width: 8px
 	::-webkit-scrollbar-thumb
 		background-color: $thumb
